--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
   
   <dependencies>
     <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongo-java-driver</artifactId>
+    	<version>3.6.3</version>
+	</dependency>
+    <dependency>
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-mapper-asl</artifactId>
 		<version>${jackson-mapper-asl.version}</version>
