added doa objects, currency data and airports data

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <properties>
+  	 <maven.compiler.target>1.8</maven.compiler.target>
+     <maven.compiler.source>1.8</maven.compiler.source>
      <jsoup.version>1.7.2</jsoup.version>
      <rest-assured.version>3.0.0</rest-assured.version>
      <log4j.version>1.2.17</log4j.version>
@@ -42,6 +44,11 @@
     	<groupId>io.rest-assured</groupId>
     	<artifactId>rest-assured</artifactId>
     	<version>${rest-assured.version}</version>
+	</dependency>
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>6.0.6</version>
 	</dependency>
   </dependencies>
 
