--- a/data-manager/pom.xml
+++ b/data-manager/pom.xml
@@ -65,6 +65,11 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>6.0.6</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.flywaydb</groupId>
+	    <artifactId>flyway-core</artifactId>
+	    <version>5.0.7</version>
+	</dependency>
   </dependencies>
 
 </project>
