--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -20,6 +20,11 @@
 		<artifactId>jackson-mapper-asl</artifactId>
 		<version>${jackson-mapper-asl.version}</version>
 	</dependency>
+	<dependency>
+	    <groupId>joda-time</groupId>
+	    <artifactId>joda-time</artifactId>
+	    <version>2.9.9</version>
+	</dependency>
     <dependency>
     	<groupId>org.jsoup</groupId>
     	<artifactId>jsoup</artifactId>
