--- a/data-manager/pom.xml
+++ b/data-manager/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>jkozak</groupId>
-  <artifactId>flight-scrapper</artifactId>
+  <groupId>flight-scrapper</groupId>
   <version>0.0.1-SNAPSHOT</version>
   
   <properties>
@@ -82,4 +81,21 @@
 	</dependency>
   </dependencies>
 
+	<build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	            <version>1.2.5.RELEASE</version>
+	            <executions>
+	                <execution>
+	                    <goals>
+	                        <goal>repackage</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+	        </plugin>
+	    </plugins>
+	 </build>
+  <artifactId>data-manager</artifactId>
 </project>
