--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>jkozak</groupId>
+  <groupId>flight-scrapper</groupId>
   <artifactId>scrapper</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
@@ -66,4 +66,21 @@
     	<version>${rest-assured.version}</version>
 	</dependency>
   </dependencies>
+  
+  <build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	            <version>1.2.5.RELEASE</version>
+	            <executions>
+	                <execution>
+	                    <goals>
+	                        <goal>repackage</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+	        </plugin>
+	    </plugins>
+	 </build>
 </project>
