--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -41,6 +41,11 @@
 		<version>${jackson-mapper-asl.version}</version>
 	</dependency>
 	<dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+	<dependency>
 	    <groupId>joda-time</groupId>
 	    <artifactId>joda-time</artifactId>
 	    <version>2.9.9</version>
