--- a/scrapper-ui/package.json
+++ b/scrapper-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
     "http-server": "^0.11.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
