--- a/scrapper-ui/package.json
+++ b/scrapper-ui/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
     "http-server": "^0.11.1",
+    "properties-reader": "0.0.16",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
