--- a/scrapper-ui/package.json
+++ b/scrapper-ui/package.json
@@ -8,6 +8,7 @@
     "http-server": "^0.11.1",
     "properties-reader": "0.0.16",
     "react": "^16.3.2",
+    "react-date-picker": "^6.10.4",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
